--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,3 +34,12 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+          
+      # push event to parent-repo
+      - name: Repository Dispatch
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}
+          repository: wehwan/docs-auto-test
+          event-type: build-project
+          client-payload: '{"submodule": "${{ github.repository }}"}'
